third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/hex_and_decimal_address.exp
module 0x7b::M {
    struct S has copy, drop {
    }
    public fun s(): S {
        S{}
    }
    public fun take(_s: S) {
        ()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    use 0x7b::M;
    public entry fun <SELF>_0() {
        M::take(M::s());
        M::take(M::s());
        M::take(M::s());
        M::take(M::s());
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ hex_and_decimal_address.move:12:76
   │
12 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
   │                                                                            ^
   │                                                                            │
   │                                                                            Unexpected '<'
   │                                                                            Expected an identifier
